--- a/Front---End/package.json
+++ b/Front---End/package.json
@@ -32,6 +32,7 @@
     "@types/mapbox-gl": "^1.12.8",
     "ajv": "6.12.5",
     "arrive": "2.4.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "4.5.2",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
@@ -45,6 +46,7 @@
     "jquery": "3.5.1",
     "mapbox-gl": "^1.13.0",
     "moment": "2.29.1",
+    "password-hash": "^1.2.2",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
