--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "FreeYourself_and_run"
   },
   "ConnectionStrings": {
     "WebApiDatabase": "ENTER PRODUCTION SQL SERVER CONNECTION STRING HERE"
