--- a/Front---End/package.json
+++ b/Front---End/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "10.1.4",
     "@angular/platform-server": "10.1.4",
     "@angular/router": "10.1.4",
+    "@types/crypto-js": "^4.0.1",
     "@types/mapbox-gl": "^1.12.8",
     "ajv": "6.12.5",
     "arrive": "2.4.1",
@@ -39,6 +40,7 @@
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
+    "crypto-js": "^4.0.0",
     "eslint": "^7.10.0",
     "express": "4.17.1",
     "googleapis": "61.0.0",
