--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -42,4 +42,6 @@ bin
 obj
 
 # local sqlite db that is auto generated
-# LocalDatabase.db
+LocalDatabase.db
+LocalDatabase.db-shm
+LocalDatabase.db-wal
