--- a/Front---End/package.json
+++ b/Front---End/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-browser-dynamic": "10.1.4",
     "@angular/platform-server": "10.1.4",
     "@angular/router": "10.1.4",
+    "@turf/along": "^6.0.1",
+    "@turf/turf": "^5.1.6",
     "@types/crypto-js": "^4.0.1",
     "@types/mapbox-gl": "^1.12.8",
     "ajv": "6.12.5",
