--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "FreeYourself_and_run"
   },
   "ConnectionStrings": {
-    "WebApiDatabase": "ENTER PRODUCTION SQL SERVER CONNECTION STRING HERE"
+    "WebApiDatabase": "Server=tcp:free-yourself.database.windows.net,1433;Initial Catalog=Free_Yourself_DB;Persist Security Info=False;User ID=freeyourself;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
