--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 WORKDIR /app
 
+
 # Copy csproj and restore as distinct layers
 COPY *.csproj ./
 RUN dotnet restore
@@ -12,6 +13,7 @@ RUN dotnet publish -c Release -o out
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
+EXPOSE 8080
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "WebApi.dll"]
 
